--- a/app/assets/stylesheets/characters/_show.scss
+++ b/app/assets/stylesheets/characters/_show.scss
@@ -1,7 +1,114 @@
-.container {
+.show-character-container {
+  margin: 40px;
+  height: 600px;
+  font-family: 'Cinzel', serif;
+  padding: 20px;
+  background-image: url('fond-show-character.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 7px;
+  box-shadow: 14px 8px 45px 7px rgba(56,44,44,0.48);
+  -webkit-box-shadow: 14px 8px 45px 7px rgba(56,44,44,0.48);
+  -moz-box-shadow: 14px 8px 45px 7px rgba(56,44,44,0.48);
+}
+
+.show-character-img-content {
+  height: 70%;
+  width: 100%;
+  display: flex;
+  letter-spacing: 1px;
+}
+
+.show-character-image-div {
+  height: 100%;
+  width: 35%;
+  object-fit: cover;
+
+}
+
+.show-character-image {
+  height: 100%;
+  width: 100%;
+  box-shadow: 28px 16px 15px -3px rgba(56,44,44,0.49);
+  -webkit-box-shadow: 28px 16px 15px -3px rgba(56,44,44,0.49);
+  -moz-box-shadow: 28px 16px 15px -3px rgba(56,44,44,0.49);
+  border-radius: 7px;
+}
+
+.show-character-content {
+  width: 65%;
+}
+
+.show-character-name-div {
+  text-align: center;
+  height: 15%;
+}
+
+.show-character-univers-race-class-available {
+  display: flex;
+  height: 85%;
+  overflow: auto;
+  text-align: center;
+  padding: 20px;
+  font-size: 22px;
+}
+
+.show-character-univers-race-class-available-display {
+  width: 35%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.show-character-univers-race-class-available-content {
+  width: 65%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.show-character-name {
+  font-family: 'Cinzel', serif;
+  font-weight: bold;
+}
+
+.show-character-caracteristic {
+  margin: 40px;
+  height: 30%;
+  font-size: 22px;
+}
+
+.show-character-caracteristic-display {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.show-character-caracteristic-content {
+  display: flex;
+  justify-content: space-around;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.btn-show-container {
+  display: flex;
+  width: 100%;
   justify-content: space-evenly;
-  align-items: center;
-  height: 100vh;
+}
+
+.text-affichage-show-character-div{
+  text-align: center;
+  margin: 20px;
+  margin-top: 30px;
+}
+
+.text-affichage-show-character {
+  font-family: 'Cinzel', serif;
+  font-size: 20px;
 }
