modif de l'univers

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -18,10 +18,9 @@
                     <p>Univers</p>
                     <p>Race</p>
                     <p>Classe</p>
-                    <p>Status</p>
                 </div>
                 <div class="show-character-univers-race-class-available-content">
-                    <p><%= @character.univers_class.name %></p>
+                    <p><%= @character.universe.name %></p>
                     <p><%= @character.race.name %></p>
                     <p><%= @character.univers_class.name %></p>
                 </div>
