--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
     <link rel="shortcut icon" href="<%= asset_path 'favicon.png' %>">
   </head>
-  <body>
+  <body data-controller="tooltip">
     <% if action_name != "home"%>
       <%= render "shared/navbar" %>
     <% end %>
