--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -114,7 +114,7 @@
 
 .btn-cta:hover{
   transition: all .5s;
-  transform: rotate(-3deg) scale(1.1);
+  transform: scale(1.1);
   box-shadow: 0px 3px 5px rgba(0,0,0,.4);
 }
 .btn-cta:hover span{
