--- a/app/assets/stylesheets/universes/_home.scss
+++ b/app/assets/stylesheets/universes/_home.scss
@@ -1,51 +1,90 @@
-.cards_univers {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .cards_univer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-  }
-  
-  .cards_univer .text {
-    flex: 1;
-    padding: 10px;
-  }
-  
-  .cards_univer .image {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .cards_univer .image img {
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    width: 500px;
-    height: 300px;
-  }
-  
-  .cards_univer.left-image .text {
-    order: 1;
-  }
-  
-  .cards_univer.left-image .image {
-    order: 2;
-  }
-  
-  .cards_univer.right-image .text {
-    order: 2;
-  }
-  
-  .cards_univer.right-image .image {
-    order: 1;
-  }
-  
+body{
+background-color: #000000d5;
+}
+
+.container_universes {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  justify-content: space-around;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.universe {
+  position: relative;
+  width: 600px;
+  height: 400px;
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  cursor: pointer;
+  text-align: center;
+}
+
+.text {
+  transition: .5s ease;
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #000000;
+}
+.description {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.universe:hover .description {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20%;
+  border-radius: 10px;
+  height: 400px;
+  width: 600px;
+  text-align: center;
+  background-color: #00000071;
+  opacity: 1;
+}
+.universe:hover {
+  transform: scale(1.05);
+}
+.universe:hover .text {
+  opacity: 0;
+
+}
+.titre{
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 20px;
+  text-shadow: 1px 1px 2px #0000008e;
+}
+.titre p{
+  font-size: 15px;
+}
+
+.titre h1{
+  font-size: 40px;
+}
