modif CSS couleurs titres et textes

--- a/app/assets/stylesheets/universes/_show.scss
+++ b/app/assets/stylesheets/universes/_show.scss
@@ -6,7 +6,7 @@
   
     h1 {
       font-size: 36px;
-      color: #333;
+      color: #fffefe;
       margin-bottom: 30px; // Augmentez cette valeur pour plus d'air en dessous
       margin-top: 30px;    // Ajoutez du margin-top si vous souhaitez également de l'air au-dessus
       }
@@ -16,13 +16,13 @@
   
       h2 {
         font-size: 28px;
-        color: #555;
+        color: #fffefe;
         margin: 25px; // Ajoutez du margin-top et bottom pour espacer les titres
     }
   
       p {
         font-size: 18px;
-        color: #666;
+        color: #fffefe;
         margin-bottom: 20px;
         text-align: left;
       }
