--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -6,25 +6,25 @@
   
     h1 {
       font-size: 36px;
-      color: #333;
+      color: #ffffff;
       margin-bottom: 20px;
     }
   
     .progress-bar {
-      background: #e0e0e0;
+      background: #ffffff;
       border-radius: 5px;
       overflow: hidden;
       margin-bottom: 10px;
       .progress {
         height: 20px;
-        background: #76c7c0;
+        background: #b3735d;
         transition: width 0.4s ease;
       }
     }
   
     p {
       font-size: 16px;
-      color: #666;
+      color: #000000;
       margin-bottom: 20px;
     }
   
