--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,9 @@
-// Specific CSS for your home-page
+.pages-home {
+  .page-content {
+    margin: 0;
+  }
+}
+
 .hero-banner {
   background-size: cover;
   background-position: top;
