--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,8 @@
+.page-content {
+  margin: 1em;
+  flex-grow: 1;
+}
+
 .navbar-site .ul-navbar {
   list-style-type: none;
   margin: 0;
@@ -31,21 +36,62 @@
 }
 
 .navbar-site {
-  box-shadow: 0px 2px 6px 0px rgba(29, 29, 29, 0.85);
-  position: sticky;
-  width: 100%;
-  top: 0;
-  z-index: 100;
+  box-shadow: 15px 8px 45px 7px rgba(56,44,44,0.48);
+  flex: 0 0 200px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
   transition: top 0.3s;
+  position: sticky;
+  top: 0;
 }
 
 .div-avatar-pseudo {
-  display: inline;
-  margin-top: 5px;
-  margin-right: 15px;
+    width: 80%;
+    height: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #838383;
 }
 
 nav {
   background-color: #494949;
   width: 100%;
+}
+
+.list-link-navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ul-navbar {
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar-content {
+  height: 100%;
+  align-content: space-between;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar-portail-des-heros {
+  color: white;
+  text-align: center;
+  width: 80%;
+  font-family: Plate Gothic Two Four;
+  display: grid;
+  padding: 14px 16px;
+  margin-top: 10px;
+  border-bottom: 1px solid #838383;
+}
+
+.avatar {
+  height: 60px;
+  width: 60px;
 }
