--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,23 @@
-<nav class="navbar-site d-flex justify-content-between">
-    <div class="list-link-navbar">
-        <ul class="ul-navbar">
-            <li class="list-navbar"><%= link_to 'Accueil', root_path, class: 'link-navbar' %></li>
-            <li class="list-navbar"><%= link_to 'Tutoriels', tutorials_path, class: 'link-navbar' %></li>
-            <li class="list-navbar"><%= link_to 'Lexique', posts_path, class: 'link-navbar' %></li>
-            <li class="list-navbar"><%= link_to 'Univers', universes_path, class: 'link-navbar' %></li>
-            <li class="list-navbar"><%= link_to 'Créer mon personnage', universes_path, class: 'link-navbar' %></li>
-            <li class="list-navbar"><a class="link-navbar" href="#contact">Tableau de bord</a></li>
-        </ul>
-    </div>
-    <div class="div-avatar-pseudo">
-        <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
-        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
+<nav class="navbar-site">
+    <div class="navbar-content">
+        <div class="list-link-navbar">
+            <h3 class="navbar-portail-des-heros">Le portail des héros</h3>
+            <ul class="ul-navbar">
+                <li class="list-navbar"><%= link_to 'Accueil', root_path, class: 'link-navbar' %></li>
+                <li class="list-navbar"><%= link_to 'Mes personnages', tutorials_path, class: 'link-navbar' %></li>
+                <li class="list-navbar"><%= link_to 'Lexique', posts_path, class: 'link-navbar' %></li>
+                <li class="list-navbar"><%= link_to 'Univers', universes_path, class: 'link-navbar' %></li>
+                <li class="list-navbar"><%= link_to 'Créer mon personnage', universes_path, class: 'link-navbar' %></li>
+                <li class="list-navbar"><a class="link-navbar" href="#contact">Tableau de bord</a></li>
+            </ul>
+        </div>
+        <div class="div-avatar-pseudo">
+            <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
+            </div>
         </div>
     </div>
 </nav>
