--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="character-edit">
-  <h1>La découverte</h1>
+  <h1>Création de votre personnage</h1>
 
   <!-- Progress bar -->
   <div class="progress-bar">
