--- a/app/assets/stylesheets/characters/_show.scss
+++ b/app/assets/stylesheets/characters/_show.scss
@@ -27,8 +27,7 @@
 }
 
 .show-character-image {
-  height: 100%;
-  width: 100%;
+  margin-left: 15%;
   box-shadow: 28px 16px 15px -3px rgba(56,44,44,0.49);
   -webkit-box-shadow: 28px 16px 15px -3px rgba(56,44,44,0.49);
   -moz-box-shadow: 28px 16px 15px -3px rgba(56,44,44,0.49);
@@ -111,4 +110,5 @@
 .text-affichage-show-character {
   font-family: 'Cinzel', serif;
   font-size: 20px;
+  color: white;
 }
