mini modif partout

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -81,7 +81,7 @@ nav {
 }
 
 .navbar-portail-des-heros {
-  color: white;
+  color: #EBD18B;
   text-align: center;
   width: 80%;
   font-family: Plate Gothic Two Four;
