--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,21 +2,19 @@ button, .button {
   background:#6b6b6b;
   color: rgb(255, 255, 255);
   letter-spacing: 1px;
-  padding: 5px 15px;
+  padding: 5px 7px;
   text-align: center;
   text-decoration: none;
   border-style: none;
   font-weight: bold;
   font-size: 24px;
   cursor: pointer;
-  border: 4px double rgb(255,222,35);
+  border: 4px double #ffde238f;
   font-family: 'Cinzel', serif;
   margin: 10px;
   transition-duration: 0.5s;
-  box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
-  -webkit-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
-  -moz-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
-  border-radius: 5px;
+  box-shadow: 10px 9px 5px -5px rgba(255, 255, 255, 0.377);
+  border-radius: 18px;
 }
 
 button:hover {
