--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container_universes">
 
 <div class="titre">
-  <h1>BIENVENUE AVENTURIER</h1>
-  <h3>Choisis ton favori parmi nos univers disponibles</h3>
-  <p>passe ta souris sur l'un d'eux pour découvrir son histoire</p>
+  <h1>Bienvenue, aventurier intrépide !</h1>
+  <h3>Plonge dans l'un de nos mondes fantastiques</h3>
+  <p>Survole les univers pour découvrir leurs mystères et leurs légendes...</p>
 </div>
 
   <% @universes.each do |universe| %>
