--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,7 +22,7 @@
   height:45px;
   background: rgba(0, 0, 0, 0.616);
   border-style: none;
-  color:rgba(255, 255, 0, 0.712);
+  color:#d79c1f;
   font-size: 19px;
   letter-spacing: 3px;
   font-family: 'Lato';
