--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -110,6 +110,7 @@
         flex-direction: column;
         align-items: center;
         margin: 0 10px;
+        color: #ffffff;
   
         label {
           font-size: 14px;
