--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -9,7 +9,11 @@
       color: #ffffff;
       margin-bottom: 20px;
     }
-  
+
+    .nom_du_personnage_p {
+      color: white;
+    }
+      
     .progress-bar {
       background: #ffffff;
       border-radius: 5px;
