--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -3,13 +3,18 @@
     margin: 0 auto;
     padding: 20px;
     text-align: center;
-  
+
+    .character_name {
+      font-size: 24px;
+      color: #ffffff;
+      margin-bottom: 20px;
+    }
     h1 {
       font-size: 36px;
       color: #ffffff;
       margin-bottom: 20px;
     }
-  
+
     .progress-bar {
       background: #ffffff;
       border-radius: 5px;
@@ -21,18 +26,18 @@
         transition: width 0.4s ease;
       }
     }
-  
+
     p {
       font-size: 16px;
       color: #ffffff;
       margin-bottom: 20px;
     }
-  
+
     .options-wrapper {
       display: flex;
       flex-direction: column;
     }
-  
+
     .option-item {
       position: relative;
       margin-bottom: 20px;
@@ -45,16 +50,16 @@
       display: flex;
       align-items: center;
     }
-  
+
     .option-item:hover {
       border-color: #76c7c0;
     }
-  
+
     .option-item input[type="radio"] {
       position: absolute;
       transform: scale(0);
     }
-  
+
     .option-item img {
       width: 100px;
       height: 100px;
@@ -62,56 +67,56 @@
       margin-right: 10px;
       border-radius: 4px;
     }
-  
+
     .option-item label {
       display: flex;
       align-items: center;
       width: 100%;
     }
-  
+
     .option-item .description {
       text-align: left;
       display: flex;
       flex-direction: column;
       justify-content: center;
     }
-  
+
     .option-item input[type="radio"]:checked + label {
       border: 2px solid #76c7c0;
       background-color: #f0f8f8;
     }
-  
+
     .button-container {
       display: flex;
       justify-content: center;
       gap: 20px;
       margin-top: 20px;
-  
+
       .btn-secondary {
         @extend .button;
       }
-  
+
       .button {
         @extend .button;
       }
     }
-  
+
     .sliders-container {
       display: flex;
       justify-content: space-around;
       margin: 20px 0;
-  
+
       .slider-item {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin: 0 10px;
-  
+
         label {
           font-size: 14px;
           margin-bottom: 10px;
         }
-  
+
         input[type="range"] {
           writing-mode: bt-lr; /* IE */
           -webkit-appearance: slider-vertical; /* WebKit */
@@ -123,7 +128,7 @@
           background: #76c7c0;
           cursor: pointer;
         }
-  
+
         input[type="range"]::-webkit-slider-runnable-track {
           background: #ddd;
           border: none;
@@ -131,7 +136,7 @@
           width: 8px;
           height: 100%;
         }
-  
+
         input[type="range"]::-webkit-slider-thumb {
           -webkit-appearance: none;
           appearance: none;
@@ -142,15 +147,14 @@
           cursor: pointer;
           margin-top: -6px; /* Adjust thumb position */
         }
-  
+
         input[type="range"]:focus {
           outline: none;
         }
-  
+
         input[type="range"]:focus::-webkit-slider-runnable-track {
           background: #ccc;
         }
       }
     }
   }
-  
