--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "characters/index";
 @import "components/index";
 @import "pages/index";
+@import "tutorials/index";
 @import "universes/index";
 
 .main-layout-container {
