--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -20,7 +20,7 @@
     .nom_du_personnage_p {
       color: rgb(0, 0, 0);
     }
-      
+
 
     .progress-bar {
       background: #ffffff;
@@ -38,8 +38,8 @@
 
     .progression-text {
       color: #EBD18B; /* changer la couleur du progession %tage */
-    }    
-  
+    }
+
 
     p {
       font-size: 16px;
@@ -129,7 +129,7 @@
 
 
         color: #ffffff;
-  
+
 
         label {
           font-size: 14px;
@@ -177,3 +177,48 @@
       }
     }
   }
+
+  .donjons-et-dragons::after {
+    content: "";
+    background-image: url('dnd.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+  }
+
+  .call-of-cthulhu::after {
+    content: "";
+    background-image: url('chtullu.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.4;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+  }
+
+  .runequest::after {
+    content: "";
+    background-image: url('runequest.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+    }
