--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
             <h3 class="navbar-portail-des-heros">Le portail des héros</h3>
             <ul class="ul-navbar">
                 <li class="list-navbar"><%= link_to 'Accueil', root_path, class: 'link-navbar' %></li>
-                <li class="list-navbar"><%= link_to 'Mes personnages', tutorials_path, class: 'link-navbar' %></li>
+                <li class="list-navbar"><%= link_to 'Mes personnages', characters_path, class: 'link-navbar' %></li>
                 <li class="list-navbar"><%= link_to 'Lexique', posts_path, class: 'link-navbar' %></li>
                 <li class="list-navbar"><%= link_to 'Univers', universes_path, class: 'link-navbar' %></li>
                 <li class="list-navbar"><%= link_to 'Créer mon personnage', universes_path, class: 'link-navbar' %></li>
