Message d'alerte si l'ID du Character n'existe pas lors d'une requete avec ID

--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,9 +1,5 @@
-<% content_for :title do %>
-  Mes Personnages
-<% end %>
-
 <div class="characters-index">
-  <h1>Tous les Characters</h1>
+  <h1> Mes Personnages</h1>
 
   <table>
     <thead>
