le delete doit etre un button_to

--- a/app/assets/stylesheets/characters/_table_in_characters.scss
+++ b/app/assets/stylesheets/characters/_table_in_characters.scss
@@ -6,6 +6,10 @@
     color: #ffffff;  // Couleur de texte sombre pour un bon contraste
   }
 
+  .inline-form {
+    display: inline;
+  }
+  
   table {
     width: 100%;
     border-collapse: collapse;
