--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,6 +1,5 @@
 <div class="characters-index">
   <h1> Mes personnages</h1>
-
   <table>
     <thead>
       <tr>
@@ -39,7 +38,7 @@
           <td>
             <%= link_to 'Show', character_path(character) %>
             <%= link_to 'Edit', edit_character_path(character) %>
-            <%= link_to 'Delete', character_path(character), method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= button_to 'Delete', character_path(character), method: :delete, data: { confirm: 'Est-ce que vous en êtes sûr de vous ?' }, form: { class: 'inline-form' } %>
           </td>
         </tr>
       <% end %>
