--- a/app/views/characters/all_characters.html.erb
+++ b/app/views/characters/all_characters.html.erb
@@ -40,7 +40,7 @@
           <td>
             <%= link_to 'Show', character_path(character) %>
             <%= link_to 'Edit', edit_character_path(character) %>
-            <%= link_to 'Delete', character_path(character), method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= button_to 'Delete', character_path(character), method: :delete, data: { confirm: 'Est-ce que vous en êtes sûr de vous ?' }, form: { class: 'inline-form' } %>
           </td>
         </tr>
       <% end %>
