--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,25 +11,29 @@
 .hero-banner {
   background-size: cover;
   background-position: top;
- height: 100vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 100px;
+  font-family: $body-font; // Utilisation de la police pour le corps du texte
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: $headers-font; // Utilisation de la police pour les en-têtes
+}
 
-.btn-cta{
- padding: 9px;
+.btn-cta {
+  padding: 9px;
   text-align: center;
-  width:344px;
-  height:45px;
+  width: 344px;
+  height: 45px;
   background: rgba(0, 0, 0, 0.616);
   border-style: none;
-  color:#d79c1f;
+  color: #d79c1f;
   font-size: 19px;
   letter-spacing: 3px;
-  font-family: 'Lato';
+  font-family: $headers-font; // Utilisation de la police Cinzel
   font-weight: 600;
   outline: none;
   cursor: pointer;
@@ -38,15 +42,15 @@
   transition: all .5s;
   box-shadow: 0px 1px 2px rgba(0,0,0,.2);
 }
-.btn-cta span{
+.btn-cta span {
   position: absolute;
   display: block;
 }
-.btn-cta span:nth-child(1){
+.btn-cta span:nth-child(1) {
   height: 3px;
-  width:344px;
-  top:0px;
-  left:-344px;
+  width: 344px;
+  top: 0px;
+  left: -344px;
   background: linear-gradient(to right, rgba(0,0,0,0), #f6e58d);
   border-top-right-radius: 1px;
   border-bottom-right-radius: 1px;
@@ -54,37 +58,37 @@
   animation-delay: 2.3s;
 }
 
-@keyframes span1{
-  0%{
-      left:-344px
+@keyframes span1 {
+  0% {
+    left: -344px;
   }
-  100%{
-      left:344px;
+  100% {
+    left: 344px;
   }
 }
-.btn-cta span:nth-child(2){
+.btn-cta span:nth-child(2) {
   height: 45px;
   width: 3px;
-  top:-45px;
-  right:0px;
+  top: -45px;
+  right: 0px;
   background: linear-gradient(to bottom, rgba(0,0,0,0), #f6e58d);
   border-bottom-left-radius: 1px;
   border-bottom-right-radius: 1px;
   animation: span2 2s linear infinite;
   animation-delay: 3.3s;
 }
-@keyframes span2{
-  0%{
-      top:-45px;
+@keyframes span2 {
+  0% {
+    top: -45px;
   }
-  100%{
-      top:45px;
+  100% {
+    top: 45px;
   }
 }
-.btn-cta span:nth-child(3){
-  height:3px;
-  width: 344px;;
-  right: -344px;;
+.btn-cta span:nth-child(3) {
+  height: 3px;
+  width: 344px;
+  right: -344px;
   bottom: 0px;
   background: linear-gradient(to left, rgba(0,0,0,0), #f6e58d);
   border-top-left-radius: 1px;
@@ -92,40 +96,40 @@
   animation: span3 2s linear infinite;
   animation-delay: 4.3s;
 }
-@keyframes span3{
-  0%{
-      right: -344px;;
+@keyframes span3 {
+  0% {
+    right: -344px;
   }
-  100%{
-      right: 344px;
+  100% {
+    right: 344px;
   }
 }
 
-.btn-cta span:nth-child(4){
-  height:45px;
-  width:3px;
-  bottom:-45px;
-  left:0px;
+.btn-cta span:nth-child(4) {
+  height: 45px;
+  width: 3px;
+  bottom: -45px;
+  left: 0px;
   background: linear-gradient(to top, rgba(0,0,0,0), #f6e58d);
   border-top-right-radius: 1px;
   border-top-left-radius: 1px;
   animation: span4 2s linear infinite;
   animation-delay: 5.3s;
 }
-@keyframes span4{
-  0%{
-      bottom: -45px;
+@keyframes span4 {
+  0% {
+    bottom: -45px;
   }
-  100%{
-      bottom:45px;
+  100% {
+    bottom: 45px;
   }
 }
 
-.btn-cta:hover{
+.btn-cta:hover {
   transition: all .5s;
   transform: scale(1.1);
   box-shadow: 0px 3px 5px rgba(0,0,0,.4);
 }
-.btn-cta:hover span{
+.btn-cta:hover span {
   animation-play-state: paused;
 }
