--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 .pages-home {
   .page-content {
     margin: 0;
+    font-family: $body-font; // Utilisation de la police pour le corps du texte
   }
 }
 
@@ -21,6 +22,10 @@
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $headers-font; // Utilisation de la police pour les en-têtes
+}
+
+p {
+  font-family: $text-font; // Utilisation de la police pour les paragraphes
 }
 
 .btn-cta {
