--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,5 @@
 button, .button {
-  background:#6b6b6b;
+  background: #6b6b6b;
   color: rgb(255, 255, 255);
   letter-spacing: 1px;
   padding: 5px 7px;
@@ -10,7 +10,7 @@ button, .button {
   font-size: 24px;
   cursor: pointer;
   border: 4px double #ffde238f;
-  font-family: 'Cinzel', serif;
+  font-family: $headers-font;  // Utilisation de la variable pour la police des titres
   margin: 10px;
   transition-duration: 0.5s;
   box-shadow: 10px 9px 5px -5px rgba(255, 255, 255, 0.377);
@@ -20,12 +20,12 @@ button, .button {
 button:hover, .button:hover {
   background: #808080;
   text-decoration: none;
-  color: rgb(255,222,35);
+  color: rgb(255, 222, 35);
   text-shadow: none;
 }
 
 .button-call-of-cthulhu {
-  background:#6b6b6b;
+  background: #6b6b6b;
   color: rgb(255, 255, 255);
   letter-spacing: 1px;
   padding: 5px 15px;
@@ -36,12 +36,12 @@ button:hover, .button:hover {
   font-size: 24px;
   cursor: pointer;
   border: 4px double rgb(207, 9, 9);
-  font-family: 'Cinzel', serif;
+  font-family: $headers-font;  // Utilisation de la variable pour la police des titres
   margin: 10px;
   transition-duration: 0.5s;
-  box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
-  -webkit-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
-  -moz-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
+  box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+  -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+  -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
   border-radius: 5px;
 }
 
@@ -51,7 +51,7 @@ button:hover, .button:hover {
 }
 
 .button-donjons-et-dragons {
-  background:#6b6b6b;
+  background: #6b6b6b;
   color: rgb(255, 255, 255);
   letter-spacing: 1px;
   padding: 5px 15px;
@@ -61,23 +61,23 @@ button:hover, .button:hover {
   font-weight: bold;
   font-size: 24px;
   cursor: pointer;
-  border: 4px double rgb(255,222,35);
-  font-family: 'Cinzel', serif;
+  border: 4px double rgb(255, 222, 35);
+  font-family: $headers-font;  // Utilisation de la variable pour la police des titres
   margin: 10px;
   transition-duration: 0.5s;
-  box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
--webkit-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
--moz-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
+  box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+  -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+  -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
   border-radius: 5px;
 }
 
 .button-donjons-et-dragons:hover {
   background-color: #252525;
-  color: rgb(247, 231, 87)
+  color: rgb(247, 231, 87);
 }
 
 .button-runequest {
-  background:#6b6b6b;
+  background: #6b6b6b;
   color: rgb(255, 255, 255);
   letter-spacing: 1px;
   padding: 5px 15px;
@@ -88,12 +88,12 @@ button:hover, .button:hover {
   font-size: 24px;
   cursor: pointer;
   border: 4px double rgb(86, 101, 185);
-  font-family: 'Cinzel', serif;
+  font-family: $headers-font;  // Utilisation de la variable pour la police des titres
   margin: 10px;
   transition-duration: 0.5s;
-  box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
-  -webkit-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
-  -moz-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
+  box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+  -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+  -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
   border-radius: 5px;
 }
 
