--- a/app/assets/stylesheets/universes/_show.scss
+++ b/app/assets/stylesheets/universes/_show.scss
@@ -3,30 +3,30 @@
     margin: 0 auto;
     padding: 20px;
     text-align: center;
-  
+
     h1 {
       font-size: 36px;
       color: #fffefe;
       margin-bottom: 30px; // Augmentez cette valeur pour plus d'air en dessous
       margin-top: 30px;    // Ajoutez du margin-top si vous souhaitez également de l'air au-dessus
       }
-  
+
     .tutorial {
       margin: 30px;
-  
+
       h2 {
         font-size: 28px;
         color: #fffefe;
         margin: 25px; // Ajoutez du margin-top et bottom pour espacer les titres
     }
-  
+
       p {
         font-size: 18px;
         color: #fffefe;
         margin-bottom: 20px;
         text-align: left;
       }
-  
+
       .video {
         margin: 20px 0;
         iframe {
@@ -37,20 +37,90 @@
         }
       }
     }
-  
+
     .button-container {
       display: flex;
       justify-content: center;
       gap: 20px;
       margin-top: 20px;
-  
-      .btn-secondary {
-        @extend .button;
+
+      .button-call-of-cthulhu {
+        background: #6b6b6b;
+        color: rgb(255, 255, 255);
+        letter-spacing: 1px;
+        padding: 5px 15px;
+        text-align: center;
+        text-decoration: none;
+        border-style: none;
+        font-weight: bold;
+        font-size: 24px;
+        cursor: pointer;
+        border: 4px double rgb(207, 9, 9);
+        font-family: $headers-font;  // Utilisation de la variable pour la police des titres
+        margin: 10px;
+        transition-duration: 0.5s;
+        box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        border-radius: 5px;
       }
-  
-      .button {
-        @extend .button;
+
+      .button-call-of-cthulhu:hover {
+        color: rgb(207, 9, 9);
+        background-color: #252525;
       }
+
+      .button-donjons-et-dragons {
+        background: #6b6b6b;
+        color: rgb(255, 255, 255);
+        letter-spacing: 1px;
+        padding: 5px 15px;
+        text-align: center;
+        text-decoration: none;
+        border-style: none;
+        font-weight: bold;
+        font-size: 24px;
+        cursor: pointer;
+        border: 4px double rgb(255, 222, 35);
+        font-family: $headers-font;  // Utilisation de la variable pour la police des titres
+        margin: 10px;
+        transition-duration: 0.5s;
+        box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        border-radius: 5px;
+      }
+
+      .button-donjons-et-dragons:hover {
+        background-color: #252525;
+        color: rgb(247, 231, 87);
+      }
+
+      .button-runequest {
+        background: #6b6b6b;
+        color: rgb(255, 255, 255);
+        letter-spacing: 1px;
+        padding: 5px 15px;
+        text-align: center;
+        text-decoration: none;
+        border-style: none;
+        font-weight: bold;
+        font-size: 24px;
+        cursor: pointer;
+        border: 4px double rgb(86, 101, 185);
+        font-family: $headers-font;  // Utilisation de la variable pour la police des titres
+        margin: 10px;
+        transition-duration: 0.5s;
+        box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        -webkit-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        -moz-box-shadow: 15px 13px 16px -5px rgba(171, 171, 171, 0.94);
+        border-radius: 5px;
+      }
+
+      .button-runequest:hover {
+        background-color: #252525;
+        color: rgb(86, 101, 185);
+      }
+
     }
   }
-  
