--- a/app/views/characters/all_characters.html.erb
+++ b/app/views/characters/all_characters.html.erb
@@ -1,4 +1,4 @@
-<div class="characters-index">
+<div class="characters-index dark-bg">
   <h1>Tous les personnages du serveur</h1>
   <p>Attention, cet espace vous donne accès à tous les personnages du serveur. Vous pouvez les consulter, les modifier ou les supprimer.</p>
 
