clean et rename du scss

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,11 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "button";
+@import "background-by-universe";
 @import "card_character";
 @import "chatroom";
 @import "content-site";
 @import "form_legend_clear";
+@import "my_buttons";
 @import "navbar";
-@import "title_page_top";
 @import "progress_bar";
+@import "title_page_top";
