add actioncable to importmap

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,7 @@
 @import "avatar";
 @import "background-by-universe";
 @import "card_character";
-@import "chatroom";
+@import "chatbox";
 @import "content-site";
 @import "form_legend_clear";
 @import "my_buttons";
