--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -25,7 +25,7 @@
           <% end %>
         </div>
         <%= simple_form_for [@party, @party.messages.build],
-          html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
+          html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex w-100" } do |f| %>
           <%= f.input :content, label: false, placeholder: "Message", wrapper_html: { class: "flex-grow-1" } %>
           <%= f.submit "Envoyer", class: "btn btn-primary mb-3" %>
         <% end %>
