--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -101,3 +101,23 @@ button:hover, .button:hover {
   background-color: #252525;
   color: rgb(86, 101, 185);
 }
+
+.button-destin{
+  margin-left: 250px;
+  margin-right: 250px;
+  background: #6b6b6b;
+  color: rgb(255, 255, 255);
+  letter-spacing: 1px;
+  padding: 5px 7px;
+  text-align: center;
+  text-decoration: none;
+  border-style: none;
+  font-weight: bold;
+  font-size: 24px;
+  cursor: pointer;
+  border: 4px double #ffde238f;
+  font-family: $headers-font;  // Utilisation de la variable pour la police des titres
+  transition-duration: 0.5s;
+  box-shadow: 10px 9px 5px -5px rgba(255, 255, 255, 0.377);
+  border-radius: 18px;
+}
